--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "react-native": "0.50.4"
   },
   "devDependencies": {
-    "babel-jest": "21.2.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "21.2.1",
-    "react-test-renderer": "16.0.0",
-    "@storybook/react-native": "^3.2.16",
     "@storybook/addon-actions": "^3.2.16",
     "@storybook/addon-links": "^3.2.16",
+    "@storybook/react-native": "^3.2.16",
+    "babel-eslint": "^8.0.3",
+    "babel-jest": "21.2.0",
+    "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.12.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
+    "jest": "21.2.1",
+    "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
-    "prop-types": "^15.6.0"
+    "react-test-renderer": "16.0.0"
   },
   "jest": {
     "preset": "react-native"
