Copy the Switch component from the earlier project, and set it up on Storybook.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.50.4"
+    "react-native": "0.50.4",
+    "react-native-linear-gradient": "^2.3.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.16",
