Add a draft for side menu item component.

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "eol-last": "off",
     "no-use-before-define": "off",
     "no-trailing-spaces": "off",
+    "global-require": "off",
     "react/jsx-filename-extension": "off"
   }
 }
