--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.50.4",
-    "react-native-linear-gradient": "^2.3.0"
+    "react-native": "^0.50.4",
+    "react-native-linear-gradient": "^2.3.0",
+    "react-native-svg": "5.5.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.16",
