--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "^0.50.4",
     "react-native-fast-image": "^2.0.1",
     "react-native-linear-gradient": "^2.3.0",
-    "react-native-svg": "5.5.1"
+    "react-native-svg": "5.5.1",
+    "react-navigation": "^1.0.0-beta.22"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
