Fix an issue with some navigation views not taking up the whole container space, add Apollo, create a component for showing items in a category that uses a GraphQL query to fetch the items.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "storybook": "storybook start -p 7007"
   },
   "dependencies": {
+    "apollo-client-preset": "^1.0.5",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "react": "16.0.0",
+    "react-apollo": "^2.0.4",
     "react-native": "^0.50.4",
     "react-native-fast-image": "^2.0.1",
     "react-native-linear-gradient": "^2.3.0",
