--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "^0.50.4",
     "react-native-fast-image": "^2.0.1",
     "react-native-linear-gradient": "^2.3.0",
+    "react-native-modal": "^4.1.1",
     "react-native-svg": "5.5.1",
     "react-navigation": "^1.0.0-beta.22"
   },
