--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-linear-gradient": "^2.3.0",
     "react-native-modal": "^4.1.1",
     "react-native-svg": "5.5.1",
-    "react-navigation": "^1.0.0-beta.22"
+    "react-navigation": "^1.0.0-beta.22",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
