--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-modal": "^4.1.1",
     "react-native-svg": "5.5.1",
     "react-navigation": "^1.0.0-beta.22",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
   "devDependencies": {
