--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
+    "flow-bin": "^0.62.0",
     "jest": "21.2.1",
     "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
