--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
+    "@storybook/addon-knobs": "^3.3.3",
     "@storybook/addon-links": "^3.2.17",
     "@storybook/react-native": "^3.2.17",
     "babel-eslint": "^8.0.3",
