--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "storybook": "storybook start -p 7007"
+    "storybook": "storybook start -p 7007",
+    "postinstall": "rndebugger-open"
   },
   "dependencies": {
     "apollo-client-preset": "^1.0.5",
@@ -20,7 +21,8 @@
     "react-native-svg": "5.5.1",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
@@ -39,6 +41,7 @@
     "jest": "21.2.1",
     "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
+    "react-native-debugger-open": "^0.3.15",
     "react-test-renderer": "16.0.0"
   },
   "jest": {
