--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "apollo-client-preset": "^1.0.5",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
-    "react": "16.0.0",
+    "react": "16.2.0",
     "react-apollo": "^2.0.4",
-    "react-native": "^0.50.4",
+    "react-native": "0.52.0",
     "react-native-fast-image": "^2.0.1",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-modal": "^4.1.1",
@@ -37,7 +37,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "flow-bin": "^0.62.0",
+    "flow-bin": "^0.61.0",
     "jest": "21.2.1",
     "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
