--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.52.0",
     "react-native-fast-image": "^2.0.1",
     "react-native-linear-gradient": "^2.3.0",
+    "react-native-material-textfield": "^0.11.0",
     "react-native-modal": "^4.1.1",
     "react-native-svg": "5.5.1",
     "react-navigation": "^1.0.0-beta.22",
@@ -25,10 +26,10 @@
     "redux-devtools-extension": "^2.13.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.17",
-    "@storybook/addon-knobs": "^3.3.3",
-    "@storybook/addon-links": "^3.2.17",
-    "@storybook/react-native": "^3.2.17",
+    "@storybook/addon-actions": "^3.3.9",
+    "@storybook/addon-knobs": "^3.3.9",
+    "@storybook/addon-links": "^3.3.9",
+    "@storybook/react-native": "^3.3.9",
     "babel-eslint": "^8.0.3",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
