--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-client-preset": "^1.0.5",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
+    "lodash": "^4.17.5",
     "react": "16.2.0",
     "react-apollo": "^2.0.4",
     "react-native": "0.52.0",
